# cpvo

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-08-cpvo-harness.md
src/cpvo/: __init__.py  cli.py  schema.py  weeks.py
src/cpvo/engine/: __init__.py  cohort.py  cpvo.py  mirror.py  outcomes.py  review_tax.py
src/cpvo/loaders/: __init__.py  github.py  gitlab.py  mapping.py  seat_csv.py  synthetic.py
src/cpvo/render/: __init__.py  cli.py  dashboard.py  tokens.py
tests/: conftest.py  test_cli.py  test_cohort.py  test_cpvo.py  test_dashboard.py  test_github.py  test_mapping.py  test_mirror.py  test_outcomes.py  test_render_cli.py  test_review_tax.py  test_schema.py  test_seat_csv.py  test_synthetic.py  test_wall.py  test_weeks.py
