[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cpvo"
version = "0.1.0"
description = "Cost per verified outcome: a reference harness for measuring AI dev-tool spend against outcomes that survive production."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["pandas>=2.0", "requests>=2.31", "PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
cpvo = "cpvo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
